--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -17,19 +17,16 @@
 
 <div class="top">
 
-	<div class="entry">
-		<label>Range</label>
-		<span>200 KM</span>
+	<div class="entry left deactivated">
+		<div class="icon wind">
+			<img src="images/wind.png" />
+			<span> Deactivated </span>
+		</div>
 	</div>
 
 	<div class="entry">
-		<label>Consum.</label>
-		<span>200 KM</span>
-	</div>
-
-	<div class="entry">
-		<label>Heading</label>
-		<span>045ºNE</span>
+		<label>Ext. Temp</label>
+		<span>29ºC</span>
 	</div>
 
 	<div class="entry">
@@ -38,14 +35,63 @@
 	</div>
 
 	<div class="entry">
-		<label>Ext. Temp</label>
-		<span>29ºC</span>
+		<label>Heading</label>
+		<span>045ºNE</span>
 	</div>
 
-	<div class="hour">
-		<label>01:30</label>
+	<div class="entry">
+		<label>Batery</label>
+		<span>12v</span>
 	</div>
 
+	<div class="clear"></div>
+</div>
+
+<div class="bottom">
+
+	<div class="entry">
+		<div class="icon oil">
+			<img src="images/oil.png" />
+		</div>
+		<div class="data">
+			<label>Oil pressure</label>
+			<span>6.4 Bar</span>
+		</div>
+		<div class="clear"></div>
+		<div class="progress">
+			<div class="bar" style="width: 30%"></div>
+		</div>
+	</div>
+
+	<div class="entry">
+		<div class="icon water">
+			<img src="images/water.png" />
+		</div>
+		<div class="data">
+			<label>Water temp.</label>
+			<span>89ºC</span>
+		</div>
+		<div class="clear"></div>
+		<div class="progress">
+			<div class="bar" style="width: 30%"></div>
+		</div>
+	</div>
+
+	<div class="entry">
+		<div class="icon fuel">
+			<img src="images/fuel.png" />
+		</div>
+		<div class="data">
+			<label>Oil pressure</label>
+			<span>6.4 Bar</span>
+		</div>
+		<div class="clear"></div>
+		<div class="progress">
+			<div class="bar" style="width: 30%"></div>
+		</div>
+	</div>
+
+	<div class="clear"></div>
 </div>
 
 <!--<md-icon>signal_cellular_4_bar</md-icon>-->
